crates/memscribe-testkit/tests/snapshots/events__copilot__v1__ban.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: events
---
[
  {
    "schema_version": 1,
    "source": "copilot",
    "session_id": "copilot-thread-003",
    "seq": 0,
    "event_id": "e4f6ec5b1adc5e1f2c8ef8d65fd15c556bd7bcc56f8b47b42112e65b69cb912d",
    "parent_id": null,
    "timestamp": "2026-06-22T12:00:00Z",
    "project": {
      "cwd": "/Users/dev/projects/core",
      "repo_root": null,
      "git": {
        "sha": "beadfeed9001",
        "branch": "main"
      }
    },
    "kind": {
      "event": "session_start",
      "cwd": "/Users/dev/projects/core",
      "git": {
        "sha": "beadfeed9001",
        "branch": "main"
      },
      "model": "gpt-4o",
      "tool_version": "copilot-cli 1.4.0"
    },
    "provenance": {
      "file": "fixtures/copilot/v1/ban.jsonl",
      "byte_offset": 0,
      "line_no": 1
    }
  },
  {
    "schema_version": 1,
    "source": "copilot",
    "session_id": "copilot-thread-003",
    "seq": 1,
    "event_id": "msg-1",
    "parent_id": null,
    "timestamp": "2026-06-22T12:00:11Z",
    "project": {
      "cwd": "/Users/dev/projects/core",
      "repo_root": null,
      "git": {
        "sha": "beadfeed9001",
        "branch": "main"
      }
    },
    "kind": {
      "event": "user_turn",
      "text": "We will never add a dependency on left-pad. Do not introduce it under any circumstances.",
      "parts": []
    },
    "provenance": {
      "file": "fixtures/copilot/v1/ban.jsonl",
      "byte_offset": 215,
      "line_no": 2
    }
  },
  {
    "schema_version": 1,
    "source": "copilot",
    "session_id": "copilot-thread-003",
    "seq": 2,
    "event_id": "msg-2",
    "parent_id": "msg-1",
    "timestamp": "2026-06-22T12:00:16Z",
    "project": {
      "cwd": "/Users/dev/projects/core",
      "repo_root": null,
      "git": {
        "sha": "beadfeed9001",
        "branch": "main"
      }
    },
    "kind": {
      "event": "assistant_turn",
      "text": "Acknowledged. I won't add left-pad; I'll inline a small padding helper instead.",
      "thinking": null,
      "model": "gpt-4o",
      "usage": {
        "input_tokens": 640,
        "output_tokens": 120,
        "cache_read_tokens": null,
        "cache_creation_tokens": null
      },
      "parts": []
    },
    "provenance": {
      "file": "fixtures/copilot/v1/ban.jsonl",
      "byte_offset": 419,
      "line_no": 3
    }
  },
  {
    "schema_version": 1,
    "source": "copilot",
    "session_id": "copilot-thread-003",
    "seq": 3,
    "event_id": "410bfd80ed4be1266fec0d8bf94388faa287cb388794958c6ceb6abb3d2e54d2",
    "parent_id": null,
    "timestamp": "2026-06-22T12:00:50Z",
    "project": {
      "cwd": "/Users/dev/projects/core",
      "repo_root": null,
      "git": {
        "sha": "beadfeed9001",
        "branch": "main"
      }
    },
    "kind": {
      "event": "session_end",
      "reason": "user_closed"
    },
    "provenance": {
      "file": "fixtures/copilot/v1/ban.jsonl",
      "byte_offset": 674,
      "line_no": 4
    }
  }
]
