crates/memscribe-testkit/tests/snapshots/events__copilot__v1__interleaved_arcs.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: events
---
[
  {
    "schema_version": 1,
    "source": "copilot",
    "session_id": "copilot-thread-101",
    "seq": 0,
    "event_id": "0fbc827f70a6879d0723103a245b6ce43be0266623dd50f424c4dd2a02214ef0",
    "parent_id": null,
    "timestamp": "2026-06-22T09:00:00Z",
    "project": {
      "cwd": "/Users/dev/projects/orders-api",
      "repo_root": null,
      "git": {
        "sha": "a1a1a1a1a1a1",
        "branch": "main"
      }
    },
    "kind": {
      "event": "session_start",
      "cwd": "/Users/dev/projects/orders-api",
      "git": {
        "sha": "a1a1a1a1a1a1",
        "branch": "main"
      },
      "model": "gpt-4o",
      "tool_version": "copilot-cli 1.4.0"
    },
    "provenance": {
      "file": "fixtures/copilot/v1/interleaved_arcs.jsonl",
      "byte_offset": 0,
      "line_no": 1
    }
  },
  {
    "schema_version": 1,
    "source": "copilot",
    "session_id": "copilot-thread-101",
    "seq": 1,
    "event_id": "msg-1",
    "parent_id": null,
    "timestamp": "2026-06-22T09:00:05Z",
    "project": {
      "cwd": "/Users/dev/projects/orders-api",
      "repo_root": null,
      "git": {
        "sha": "a1a1a1a1a1a1",
        "branch": "main"
      }
    },
    "kind": {
      "event": "user_turn",
      "text": "Let's use Postgres for the orders store. Update the connection module and the schema.",
      "parts": []
    },
    "provenance": {
      "file": "fixtures/copilot/v1/interleaved_arcs.jsonl",
      "byte_offset": 221,
      "line_no": 2
    }
  },
  {
    "schema_version": 1,
    "source": "copilot",
    "session_id": "copilot-thread-101",
    "seq": 2,
    "event_id": "msg-2",
    "parent_id": "msg-1",
    "timestamp": "2026-06-22T09:00:09Z",
    "project": {
      "cwd": "/Users/dev/projects/orders-api",
      "repo_root": null,
      "git": {
        "sha": "a1a1a1a1a1a1",
        "branch": "main"
      }
    },
    "kind": {
      "event": "assistant_turn",
      "text": "Switching the orders store to Postgres now.",
      "thinking": null,
      "model": "gpt-4o",
      "usage": {
        "input_tokens": 120,
        "output_tokens": 61,
        "cache_read_tokens": null,
        "cache_creation_tokens": null
      },
      "parts": []
    },
    "provenance": {
      "file": "fixtures/copilot/v1/interleaved_arcs.jsonl",
      "byte_offset": 422,
      "line_no": 3
    }
  },
  {
    "schema_version": 1,
    "source": "copilot",
    "session_id": "copilot-thread-101",
    "seq": 3,
    "event_id": "msg-2:call:call-db1",
    "parent_id": "msg-2",
    "timestamp": "2026-06-22T09:00:09Z",
    "project": {
      "cwd": "/Users/dev/projects/orders-api",
      "repo_root": null,
      "git": {
        "sha": "a1a1a1a1a1a1",
        "branch": "main"
      }
    },
    "kind": {
      "event": "tool_call",
      "call_id": "call-db1",
      "name": "apply_patch",
      "args": {
        "path": "src/db.rs"
      }
    },
    "provenance": {
      "file": "fixtures/copilot/v1/interleaved_arcs.jsonl",
      "byte_offset": 422,
      "line_no": 3
    }
  },
  {
    "schema_version": 1,
    "source": "copilot",
    "session_id": "copilot-thread-101",
    "seq": 4,
    "event_id": "msg-2:call:call-schema1",
    "parent_id": "msg-2",
    "timestamp": "2026-06-22T09:00:09Z",
    "project": {
      "cwd": "/Users/dev/projects/orders-api",
      "repo_root": null,
      "git": {
        "sha": "a1a1a1a1a1a1",
        "branch": "main"
      }
    },
    "kind": {
      "event": "tool_call",
      "call_id": "call-schema1",
      "name": "apply_patch",
      "args": {
        "path": "src/schema.rs"
      }
    },
    "provenance": {
      "file": "fixtures/copilot/v1/interleaved_arcs.jsonl",
      "byte_offset": 422,
      "line_no": 3
    }
  },
  {
    "schema_version": 1,
    "source": "copilot",
    "session_id": "copilot-thread-101",
    "seq": 5,
    "event_id": "msg-2:result:call-db1",
    "parent_id": "msg-2",
    "timestamp": "2026-06-22T09:00:09Z",
    "project": {
      "cwd": "/Users/dev/projects/orders-api",
      "repo_root": null,
      "git": {
        "sha": "a1a1a1a1a1a1",
        "branch": "main"
      }
    },
    "kind": {
      "event": "tool_result",
      "call_id": "call-db1",
      "ok": true,
      "output": "patch applied (1 file changed)"
    },
    "provenance": {
      "file": "fixtures/copilot/v1/interleaved_arcs.jsonl",
      "byte_offset": 422,
      "line_no": 3
    }
  },
  {
    "schema_version": 1,
    "source": "copilot",
    "session_id": "copilot-thread-101",
    "seq": 6,
    "event_id": "msg-2:result:call-schema1",
    "parent_id": "msg-2",
    "timestamp": "2026-06-22T09:00:09Z",
    "project": {
      "cwd": "/Users/dev/projects/orders-api",
      "repo_root": null,
      "git": {
        "sha": "a1a1a1a1a1a1",
        "branch": "main"
      }
    },
    "kind": {
      "event": "tool_result",
      "call_id": "call-schema1",
      "ok": true,
      "output": "patch applied (1 file changed)"
    },
    "provenance": {
      "file": "fixtures/copilot/v1/interleaved_arcs.jsonl",
      "byte_offset": 422,
      "line_no": 3
    }
  },
  {
    "schema_version": 1,
    "source": "copilot",
    "session_id": "copilot-thread-101",
    "seq": 7,
    "event_id": "msg-2:edit:0:src/db.rs",
    "parent_id": "msg-2",
    "timestamp": "2026-06-22T09:00:09Z",
    "project": {
      "cwd": "/Users/dev/projects/orders-api",
      "repo_root": null,
      "git": {
        "sha": "a1a1a1a1a1a1",
        "branch": "main"
      }
    },
    "kind": {
      "event": "file_edit",
      "call_id": "call-db1",
      "diff": {
        "path": "src/db.rs",
        "old": "use mysql::Pool;",
        "new": "use postgres::Client;",
        "unified": "@@ -1 +1 @@\n-use mysql::Pool;\n+use postgres::Client;",
        "added_lines": 1,
        "removed_lines": 1
      }
    },
    "provenance": {
      "file": "fixtures/copilot/v1/interleaved_arcs.jsonl",
      "byte_offset": 422,
      "line_no": 3
    }
  },
  {
    "schema_version": 1,
    "source": "copilot",
    "session_id": "copilot-thread-101",
    "seq": 8,
    "event_id": "msg-2:edit:1:src/schema.rs",
    "parent_id": "msg-2",
    "timestamp": "2026-06-22T09:00:09Z",
    "project": {
      "cwd": "/Users/dev/projects/orders-api",
      "repo_root": null,
      "git": {
        "sha": "a1a1a1a1a1a1",
        "branch": "main"
      }
    },
    "kind": {
      "event": "file_edit",
      "call_id": "call-schema1",
      "diff": {
        "path": "src/schema.rs",
        "old": "-- mysql schema",
        "new": "-- postgres schema",
        "unified": "@@ -1 +1 @@\n--- mysql schema\n+-- postgres schema",
        "added_lines": 1,
        "removed_lines": 1
      }
    },
    "provenance": {
      "file": "fixtures/copilot/v1/interleaved_arcs.jsonl",
      "byte_offset": 422,
      "line_no": 3
    }
  },
  {
    "schema_version": 1,
    "source": "copilot",
    "session_id": "copilot-thread-101",
    "seq": 9,
    "event_id": "msg-3",
    "parent_id": "msg-2",
    "timestamp": "2026-06-22T09:05:00Z",
    "project": {
      "cwd": "/Users/dev/projects/orders-api",
      "repo_root": null,
      "git": {
        "sha": "a1a1a1a1a1a1",
        "branch": "main"
      }
    },
    "kind": {
      "event": "user_turn",
      "text": "Now switch to a bounded connection pool in the same db module instead of a single client.",
      "parts": []
    },
    "provenance": {
      "file": "fixtures/copilot/v1/interleaved_arcs.jsonl",
      "byte_offset": 1346,
      "line_no": 4
    }
  },
  {
    "schema_version": 1,
    "source": "copilot",
    "session_id": "copilot-thread-101",
    "seq": 10,
    "event_id": "msg-4",
    "parent_id": "msg-3",
    "timestamp": "2026-06-22T09:05:04Z",
    "project": {
      "cwd": "/Users/dev/projects/orders-api",
      "repo_root": null,
      "git": {
        "sha": "a1a1a1a1a1a1",
        "branch": "main"
      }
    },
    "kind": {
      "event": "assistant_turn",
      "text": "Adding a bounded pool to db.rs and a new pool config module.",
      "thinking": null,
      "model": "gpt-4o",
      "usage": {
        "input_tokens": 98,
        "output_tokens": 52,
        "cache_read_tokens": null,
        "cache_creation_tokens": null
      },
      "parts": []
    },
    "provenance": {
      "file": "fixtures/copilot/v1/interleaved_arcs.jsonl",
      "byte_offset": 1554,
      "line_no": 5
    }
  },
  {
    "schema_version": 1,
    "source": "copilot",
    "session_id": "copilot-thread-101",
    "seq": 11,
    "event_id": "msg-4:call:call-db2",
    "parent_id": "msg-4",
    "timestamp": "2026-06-22T09:05:04Z",
    "project": {
      "cwd": "/Users/dev/projects/orders-api",
      "repo_root": null,
      "git": {
        "sha": "a1a1a1a1a1a1",
        "branch": "main"
      }
    },
    "kind": {
      "event": "tool_call",
      "call_id": "call-db2",
      "name": "apply_patch",
      "args": {
        "path": "src/db.rs"
      }
    },
    "provenance": {
      "file": "fixtures/copilot/v1/interleaved_arcs.jsonl",
      "byte_offset": 1554,
      "line_no": 5
    }
  },
  {
    "schema_version": 1,
    "source": "copilot",
    "session_id": "copilot-thread-101",
    "seq": 12,
    "event_id": "msg-4:call:call-pool1",
    "parent_id": "msg-4",
    "timestamp": "2026-06-22T09:05:04Z",
    "project": {
      "cwd": "/Users/dev/projects/orders-api",
      "repo_root": null,
      "git": {
        "sha": "a1a1a1a1a1a1",
        "branch": "main"
      }
    },
    "kind": {
      "event": "tool_call",
      "call_id": "call-pool1",
      "name": "create_file",
      "args": {
        "path": "src/pool.rs"
      }
    },
    "provenance": {
      "file": "fixtures/copilot/v1/interleaved_arcs.jsonl",
      "byte_offset": 1554,
      "line_no": 5
    }
  },
  {
    "schema_version": 1,
    "source": "copilot",
    "session_id": "copilot-thread-101",
    "seq": 13,
    "event_id": "msg-4:result:call-db2",
    "parent_id": "msg-4",
    "timestamp": "2026-06-22T09:05:04Z",
    "project": {
      "cwd": "/Users/dev/projects/orders-api",
      "repo_root": null,
      "git": {
        "sha": "a1a1a1a1a1a1",
        "branch": "main"
      }
    },
    "kind": {
      "event": "tool_result",
      "call_id": "call-db2",
      "ok": true,
      "output": "patch applied (1 file changed)"
    },
    "provenance": {
      "file": "fixtures/copilot/v1/interleaved_arcs.jsonl",
      "byte_offset": 1554,
      "line_no": 5
    }
  },
  {
    "schema_version": 1,
    "source": "copilot",
    "session_id": "copilot-thread-101",
    "seq": 14,
    "event_id": "msg-4:result:call-pool1",
    "parent_id": "msg-4",
    "timestamp": "2026-06-22T09:05:04Z",
    "project": {
      "cwd": "/Users/dev/projects/orders-api",
      "repo_root": null,
      "git": {
        "sha": "a1a1a1a1a1a1",
        "branch": "main"
      }
    },
    "kind": {
      "event": "tool_result",
      "call_id": "call-pool1",
      "ok": true,
      "output": "file created"
    },
    "provenance": {
      "file": "fixtures/copilot/v1/interleaved_arcs.jsonl",
      "byte_offset": 1554,
      "line_no": 5
    }
  },
  {
    "schema_version": 1,
    "source": "copilot",
    "session_id": "copilot-thread-101",
    "seq": 15,
    "event_id": "msg-4:edit:0:src/db.rs",
    "parent_id": "msg-4",
    "timestamp": "2026-06-22T09:05:04Z",
    "project": {
      "cwd": "/Users/dev/projects/orders-api",
      "repo_root": null,
      "git": {
        "sha": "a1a1a1a1a1a1",
        "branch": "main"
      }
    },
    "kind": {
      "event": "file_edit",
      "call_id": "call-db2",
      "diff": {
        "path": "src/db.rs",
        "old": "use postgres::Client;",
        "new": "use deadpool_postgres::Pool;",
        "unified": "@@ -1 +1 @@\n-use postgres::Client;\n+use deadpool_postgres::Pool;",
        "added_lines": 1,
        "removed_lines": 1
      }
    },
    "provenance": {
      "file": "fixtures/copilot/v1/interleaved_arcs.jsonl",
      "byte_offset": 1554,
      "line_no": 5
    }
  },
  {
    "schema_version": 1,
    "source": "copilot",
    "session_id": "copilot-thread-101",
    "seq": 16,
    "event_id": "msg-4:edit:1:src/pool.rs",
    "parent_id": "msg-4",
    "timestamp": "2026-06-22T09:05:04Z",
    "project": {
      "cwd": "/Users/dev/projects/orders-api",
      "repo_root": null,
      "git": {
        "sha": "a1a1a1a1a1a1",
        "branch": "main"
      }
    },
    "kind": {
      "event": "file_edit",
      "call_id": "call-pool1",
      "diff": {
        "path": "src/pool.rs",
        "old": null,
        "new": "pub struct PoolCfg { pub max: usize }",
        "unified": "@@ -0,0 +1 @@\n+pub struct PoolCfg { pub max: usize }",
        "added_lines": 1,
        "removed_lines": 0
      }
    },
    "provenance": {
      "file": "fixtures/copilot/v1/interleaved_arcs.jsonl",
      "byte_offset": 1554,
      "line_no": 5
    }
  },
  {
    "schema_version": 1,
    "source": "copilot",
    "session_id": "copilot-thread-101",
    "seq": 17,
    "event_id": "msg-5",
    "parent_id": "msg-4",
    "timestamp": "2026-06-22T09:05:30Z",
    "project": {
      "cwd": "/Users/dev/projects/orders-api",
      "repo_root": null,
      "git": {
        "sha": "a1a1a1a1a1a1",
        "branch": "main"
      }
    },
    "kind": {
      "event": "user_turn",
      "text": "Great, that covers it.",
      "parts": []
    },
    "provenance": {
      "file": "fixtures/copilot/v1/interleaved_arcs.jsonl",
      "byte_offset": 2497,
      "line_no": 6
    }
  },
  {
    "schema_version": 1,
    "source": "copilot",
    "session_id": "copilot-thread-101",
    "seq": 18,
    "event_id": "ffe974df7ed5e5e4da3ca2f106bab9a112e9de9bb7db36502096a6275650d249",
    "parent_id": null,
    "timestamp": "2026-06-22T09:06:00Z",
    "project": {
      "cwd": "/Users/dev/projects/orders-api",
      "repo_root": null,
      "git": {
        "sha": "a1a1a1a1a1a1",
        "branch": "main"
      }
    },
    "kind": {
      "event": "session_end",
      "reason": "user_closed"
    },
    "provenance": {
      "file": "fixtures/copilot/v1/interleaved_arcs.jsonl",
      "byte_offset": 2638,
      "line_no": 7
    }
  }
]
